--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,7 +1,7 @@
 .body {
     background: #04001a;
     max-width: 100vw;
-    min-height: 100vh;
+    min-height: 85vh;
     position: relative;
     overflow: hidden;
 }
@@ -11,7 +11,29 @@
     height: 400px;
     border-radius: 190px;
     position: absolute;
-    background: #d0c7ff2f;
+    background: #d0c7ff0d;
     right: -100px;
-    top: 50px;
+    top: 80px;
+    transition: 1s;
+}
+
+.block-1:hover {
+    border-radius: 100px;
+    background: #d0c7ff18;
+}
+
+.block-2 {
+    width: 400px;
+    height: 500px;
+    position: absolute;
+    background: #d0c7ff0d;
+    left: -50px;
+    transition: .5s;
+}
+
+.block-2:hover {
+    background: #d0c7ff16;
+    left: -40px;
+    border-radius: 10px;
+    rotate: 1deg;
 }
