making a new fresh site from beggining

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
 
-
 :root {
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,7 +12,8 @@ body {
   margin: 0 auto;
   min-width: 320px;
   min-height: 100vh;
-  color: white !important;
+  background-color: #ffffff !important;
+  color: #04001a !important;
 }
 
 .text-one {
