--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Handlee&display=swap');
 
 :root {
   font-synthesis: none;
@@ -12,10 +13,13 @@ body {
   margin: 0 auto;
   min-width: 320px;
   min-height: 100vh;
-  background-color: #ffffff !important;
-  color: #04001a !important;
+  color: #00051f !important;
 }
 
 .text-one {
   font-family: 'Poiret One', cursive !important;
+}
+
+.text-two {
+  font-family: 'Handlee', cursive !important;
 }
