--- a/src/components/banner/Banner.css
+++ b/src/components/banner/Banner.css
@@ -1,9 +1,25 @@
-.banner{
+.banner {
     max-width: 100vw;
     height: 90vh;
 }
 
-.img-mouse{
+.img-mouse {
     width: 100px;
-    margin-top: -100px;
+    margin-top: -120px;
+}
+
+.navbar {
+    margin-bottom: -50px;
+    margin-top: 20px;
+}
+
+.resume {
+    border: 5px solid black;
+    transition: ease-in-out .2s;
+    border-radius: 16px;
+}
+
+.resume:hover {
+    border: 5px solid black;
+    border-radius: 0 !important;
 }
