--- a/src/components/banner/Banner.css
+++ b/src/components/banner/Banner.css
@@ -23,3 +23,26 @@
     border: 5px solid black;
     border-radius: 0 !important;
 }
+
+.links {
+    display: inline-block;
+    position: relative;
+}
+
+.links::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: black;
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-in-out;
+}
+
+.links:hover:after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+}
