--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,22 @@ body {
 .text-two {
   font-family: 'Handlee', cursive !important;
 }
+
+/*  */
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #ffffff;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #000000;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #656565;
+}
