starting a new day with smooth scrolling behaviour

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body {
   min-width: 320px;
   min-height: 100vh;
   color: #00051f !important;
+  scroll-behavior: smooth !important;
 }
 
 .text-one {
