--- a/src/components/topNav/TopNav.css
+++ b/src/components/topNav/TopNav.css
@@ -3,6 +3,29 @@
     margin-top: 10px;
 }
 
-.active-link{
+.active-link {
     font-size: xx-large !important;
+}
+
+.social {
+    position: fixed;
+    top: 40%;
+    left: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.img-social {
+    width: 50px;
+    border: 3px solid #212529;
+    background-color: white;
+    padding: 8px;
+    border-radius: 16px;
+    transition: ease-in-out .5s;
+}
+
+.img-social:hover {
+    scale: 1.15;
+    rotate:10deg;
 }
