--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Handlee&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700;800;900&display=swap');
 
 :root {
   font-synthesis: none;
@@ -21,7 +22,12 @@ body {
   font-family: 'Poiret One', cursive !important;
 }
 
+
 .text-two {
+  font-family: 'Work Sans', sans-serif !important;
+}
+
+.text-three {
   font-family: 'Handlee', cursive !important;
 }
 
