--- a/src/components/banner/Banner.css
+++ b/src/components/banner/Banner.css
@@ -42,3 +42,31 @@
     transform: scaleX(1);
     transform-origin: bottom left;
 }
+
+@media only screen and (max-width: 1350px) {
+    .top-text {
+        margin-left: 20px !important;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .name-text {
+        font-size: 38px !important;
+        font-weight: 300;
+        padding-top: 20px !important;
+    }
+
+    .img-mouse {
+        width: 70px !important;
+        margin-top: -120px;
+    }
+
+    .hello {
+        font-size: 25px !important;
+    }
+
+    .dev {
+        font-size: 25px !important;
+        margin-top: 10px !important;
+    }
+}
