--- a/src/components/topNav/TopNav.css
+++ b/src/components/topNav/TopNav.css
@@ -25,5 +25,11 @@
 
 .img-social:hover {
     scale: 1.15;
-    rotate:10deg;
+    rotate: 10deg;
+}
+
+@media only screen and (max-width: 1350px) {
+    .social {
+        display: none !important;
+    }
 }
