--- a/src/pages/projectsPage/ProjectsPage.css
+++ b/src/pages/projectsPage/ProjectsPage.css
@@ -1,6 +1,6 @@
 .project-img {
-    width: 100%;
-    height: 75vh;
+    width: 900px;
+    height: 500px !important;
     background-image: url("https://i.ibb.co/02sPSKs/foodie-fiesta-449d3-web-app-home.png");
     background-position: top;
     background-repeat: no-repeat;
@@ -14,8 +14,8 @@
 }
 
 .project-img-2 {
-    width: 100%;
-    height: 75vh;
+    width: 900px;
+    height: 500px !important;
     background-image: url("https://i.ibb.co/Xz7T6yd/euphoria-safoun-web-app-home.png");
     background-position: top;
     background-repeat: no-repeat;
@@ -30,8 +30,8 @@
 }
 
 .project-img-3 {
-    width: 100%;
-    height: 75vh;
+    width: 900px;
+    height: 500px !important;
     background-image: url("https://i.ibb.co/dQtcz5Y/toytopia-safoun-web-app-home-1.png");
     background-position: top;
     background-repeat: no-repeat;
@@ -43,4 +43,29 @@
 
 .project-img-3:hover {
     background-position: bottom;
+}
+
+@media only screen and (max-width: 600px) {
+    .project-img {
+        width: 300px !important;
+        height: 250px !important;
+    }
+
+    .project-img-2 {
+        width: 300px !important;
+        height: 250px !important;
+    }
+
+    .project-img-3 {
+        width: 300px !important;
+        height: 250px !important;
+    }
+
+    .project-name{
+        font-size: 25px !important;
+    }
+
+    .links{
+        font-size: 16px !important;
+    }
 }
